Bug #616
euc code in libc not aligned with localedef
0%
Description
The support in libc for euc encodings has special code for EUC, whereby each of the variations is handled via a "variable" which provides additional logic.
Localedef's approach is much saner, where EUC-CN, EUC-KR, EUC-JP, and EUC-TW are each treated as separate encodings.
The fact that these two are in disagreement means that none of the EUC encodings can be used.
We need to make libc's look like localedefs.
At the same time, we can remove some of the special casing checks for EUC from libc.
Updated by Garrett D'Amore about 10 years ago
- Category set to lib - userland libraries
- Assignee set to Garrett D'Amore
Updated by Garrett D'Amore about 10 years ago
Webrev here:
http://mexico.purplecow.org/gdamore/webrev/euc/
It compiles and lints cleanly at least. I don't have any experience or data for EUC, so I can only assume this is correct. If it is incorrect, then at least it should be incorrect consistently with localedef.
Updated by Garrett D'Amore about 10 years ago
- Status changed from New to Resolved
This is now integrated into
changeset: 13264:1a29e6379e8a
tag: tip
user: Garrett D'Amore <garrett@nexenta.com>
date: Thu Jan 13 08:38:20 2011 -0800
description:
616 euc code in libc not aligned with localedef
Reviewed by: roland.mainz@nexenta.com
Reviewed by: albert.lee@nexenta.com
Approved by: albert.lee@nexenta.com