616 euc code in libc not aligned with localedef Reviewed by: roland.mainz@nexenta.com Reviewed by: albert.lee@nexenta.com Approved by: albert.lee@nexenta.com